# stockpile

./: .travis.yml  README.md  default.nix  manifest.yaml  run_for_all.sh
cli/: Cargo.toml
cli/src/: bin.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs
doc/design/: 01-local-crate-service.md  02-augmented-index-service.md  03-snapshot-service.md  04-stockpile-cli.md  05-cli-service-management.md  06-cli-snapshot-usage.md
jobs/: Cargo.toml
jobs/src/: aws.rs  index.rs  lib.rs
jobs/src/ais_backfiller/: mod.rs
jobs/src/index/: augmented.rs  crates_io.rs  mod.rs
jobs/src/lcs_fetcher/: common.rs  crate_source.rs  mod.rs  repository.rs
server/: Cargo.toml
server/src/: lib.rs
tools/cli/: Cargo.toml
tools/cli/src/: bin.rs  lib.rs
tools/common/: Cargo.toml
tools/common/src/: lib.rs
tools/index/: Cargo.toml
tools/index/src/: lib.rs
tools/jobs/: Cargo.toml
tools/jobs/src/: bin.rs  lib.rs
tools/server/: Cargo.toml
tools/server/src/: lib.rs
