[package]
name = "tools-cli"
version = "0.1.0"
authors = ["Alex McArther <acmcarther@google.com>"]

[[bin]]
name = "run"
path = "src/bin.rs"

[dependencies]
log = "0.3.8"
serde = "1.0.15"
serde_derive = "1.0.15"
serde_yaml = "0.7.1"
clap = "2.26.2"
fern = "0.4.3"
chrono = "0.4.0"

[dependencies.tools-common]
path = "../common"

[dependencies.tools-server]
path = "../server"
